# voxl

./: CMakeLists.txt  imgui.ini  main.cpp  vcpkg.json
assets/fonts/: roboto.json
assets/fonts/roboto/: charset.txt  metrics.json
assets/shaders/: msdf_font.frag  msdf_font.vert  ui.vert
include/components/: editor_component.h  font.h  font_mesh.h  mesh.h  name.h  rect_transform.h  tags.h  text.h  text_mesh.h  timer.h  transform.h  ui_node.h
include/core/: command.h  command_manager.h  console_context.h  dev_console.h  engine.h  engine_context.h  game_context.h  resource_manager.h  scene.h
include/events/: close_event.h  dev_console_event.h  dev_console_message_event.h  game_state_change_event.h  resize_event.h
include/graphics/: renderer.h
include/loaders/: font_loader.h  obj_loader.h  shader_loader.h  texture_loader.h
include/platform/: input_handler.h  window.h
include/resources/: font.h  shader.h  texture.h  traits.h
include/systems/: timer_system.h  user_control_system.h
include/utils/: create_font.h  create_text_mesh.h  cursor_mode.h  draw_component_header.h  font_vertex.h  game_state.h  generate_font_mesh.h  get_transform_matrix.h  get_unique.h  glyph.h  next_utf8.h  read_file.h  screen_info.h
src/core/: command_manager.cpp  dev_console.cpp  engine.cpp  scene.cpp
src/graphics/: renderer.cpp
src/loaders/: font_loader.cpp  texture_loader.cpp
src/platform/: input_handler.cpp  window.cpp
